--- a/Group 6/app/src/main/res/layout/activity_main.xml
+++ b/Group 6/app/src/main/res/layout/activity_main.xml
@@ -104,21 +104,20 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="88dp"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/g3"
-            android:layout_marginTop="28dp"
+            android:layout_marginEnd="40dp"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/button_run"
                 android:layout_width="87dp"
-                android:layout_height="wrap_content"
+                android:layout_height="32dp"
                 android:layout_alignBaseline="@+id/button_stop"
                 android:layout_alignBottom="@+id/button_stop"
-                android:layout_marginEnd="33dp"
-                android:layout_marginRight="33dp"
+                android:layout_marginBottom="2dp"
                 android:layout_toStartOf="@+id/button_stop"
                 android:background="@android:color/holo_green_light"
                 android:text="RUN" />
@@ -126,10 +125,11 @@
             <Button
                 android:id="@+id/button_stop"
                 android:layout_width="88dp"
-                android:layout_height="wrap_content"
+                android:layout_height="34dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/g3"
+                android:layout_marginBottom="2dp"
                 android:background="@android:color/holo_red_light"
                 android:text="STOP"
                 tools:layout_editor_absoluteX="148dp"
@@ -139,20 +139,41 @@
             <Button
                 android:id="@+id/button_upload"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="34dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_marginBottom="2dp"
                 android:background="@android:color/holo_orange_light"
                 android:text="UPLOAD" />
 
             <Button
                 android:id="@+id/button_download"
                 android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="2dp"
+                android:background="@android:color/holo_blue_bright"
+                android:text="DOWNLOAD" />
+
+            <Button
+                android:id="@+id/button_createDB"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:background="@android:color/holo_blue_bright"
-                android:text="DOWNLOAD" />
+                android:layout_marginBottom="2dp"
+                android:background="@android:color/holo_purple"
+                android:text="CREATE (DB + TRAIN + TEST) DATA SET" />
+
+            <Button
+                android:id="@+id/button_train"
+                android:layout_width="wrap_content"
+                android:layout_height="31dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@color/colorAccent"
+                android:text="TRAIN" />
         </LinearLayout>
 
     </RelativeLayout>
